--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,8 +1,58 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:light,regular,bold,italic&subset=latin,latin-ext");
 @import url(vendors/bootstrap.min.css);
 @import url(vendors/bootstrap-theme.min.css);
+@import url(../../node_modules/react-flexbox-grid/dist/react-flexbox-grid.css);
 body {
+  overflow: hidden;
   margin: 0;
   padding: 0;
-  font-family: "Roboto Condensed", sans-serif;
-  font-weight: lighter; }
+  font-family: "Roboto Condensed", sans-serif !important;
+  font-weight: lighter;
+  background-color: #eee !important; }
+
+.header {
+  width: 100%;
+  height: 120px;
+  background-color: rgba(47, 65, 190, 0.87);
+  display: flex; }
+  .header__title {
+    flex: 1;
+    color: #DDD;
+    justify-content: center;
+    display: flex;
+    align-items: center; }
+
+.form input:focus, .form input:hover, .form input:active {
+  border-color: #ccc !important;
+  box-shadow: none !important; }
+
+.form .btn {
+  font-size: 16px;
+  height: 40px;
+  width: calc(100% / 4); }
+
+.list-container {
+  display: flex;
+  height: 150px; }
+  .list-container .card {
+    margin: 5px; }
+
+.card {
+  background-color: #fff;
+  border: 1px solid #bdbd;
+  cursor: pointer;
+  position: relative; }
+  .card:hover .overlay {
+    background-color: rgba(0, 0, 0, 0.2); }
+  .card .overlay {
+    transition: all 0.5s ease;
+    background-color: transparent;
+    height: 100%;
+    width: 100%;
+    position: absolute; }
+  .card__header {
+    text-align: center;
+    background-color: rgba(186, 181, 181, 0.79);
+    padding: 10px; }
+  .card__body {
+    padding: 10px; }
