--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,10 +1,83 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:light,regular,bold,italic&subset=latin,latin-ext');
 @import 'vendors/bootstrap.min.css';
 @import 'vendors/bootstrap-theme.min.css';
+@import '../../node_modules/react-flexbox-grid/dist/react-flexbox-grid.css';
+
+// @import 'components/Form/form.scss';
 
 body {
+  overflow: hidden;
   margin: 0;
   padding: 0;
-  font-family: "Roboto Condensed", sans-serif;
+  font-family: "Roboto Condensed", sans-serif !important;
   font-weight: lighter;
+  background-color: #eee !important;
+}
+
+.header {
+  width: 100%;
+  height: 120px;
+  background-color: rgba(47, 65, 190, 0.87);
+  display: flex;
+
+  &__title {
+    flex: 1;
+    color: #DDD;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+  }
+}
+
+.form {
+  input:focus,input:hover,input:active {
+    border-color: #ccc !important;
+    box-shadow: none !important;
+  }
+
+  .btn {
+    font-size: 16px;
+    height: 40px;
+    width: calc(100% / 4;)
+  }
+}
+
+.list-container {
+  display: flex;
+  height: 150px;
+
+  .card {
+    margin: 5px;
+  }
+}
+
+.card {
+  background-color: #fff;
+  border: 1px solid #bdbd;
+  cursor: pointer;
+  position: relative;
+
+  &:hover {
+    .overlay {
+      background-color: rgba(#000000, 0.2);
+    }
+  }
+
+  .overlay {
+    transition: all 0.5s ease;
+    background-color: transparent;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+  }
+
+  &__header {
+    text-align: center;
+    background-color: rgba(#bab5b5, 0.79);
+    padding: 10px;
+  }
+
+  &__body {
+    padding: 10px;
+  }
 }
