--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,6 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:light,regular,bold,italic&subset=latin,latin-ext");
 @import url(vendors/bootstrap.min.css);
 @import url(vendors/bootstrap-theme.min.css);
+@import url(../../node_modules/font-awesome/css/font-awesome.min.css);
 @import url(../../node_modules/react-flexbox-grid/dist/react-flexbox-grid.css);
 body {
   overflow: hidden;
@@ -8,7 +9,8 @@ body {
   padding: 0;
   font-family: "Roboto Condensed", sans-serif !important;
   font-weight: lighter;
-  background-color: #eee !important; }
+  background-color: #eee !important;
+  overflow-y: auto; }
 
 .header {
   width: 100%;
@@ -56,3 +58,12 @@ body {
     padding: 10px; }
   .card__body {
     padding: 10px; }
+
+.btn__loading {
+  margin-right: 5px; }
+
+.error {
+  color: rgba(213, 28, 28, 0.87);
+  font-weight: 600; }
+  .error .fa {
+    margin-right: 5px; }
