--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:light,regular,bold,italic&subset=latin,latin-ext');
 @import 'vendors/bootstrap.min.css';
 @import 'vendors/bootstrap-theme.min.css';
+@import '../../node_modules/font-awesome/css/font-awesome.min.css';
 @import '../../node_modules/react-flexbox-grid/dist/react-flexbox-grid.css';
 
 // @import 'components/Form/form.scss';
@@ -12,6 +13,7 @@ body {
   font-family: "Roboto Condensed", sans-serif !important;
   font-weight: lighter;
   background-color: #eee !important;
+  overflow-y: auto;
 }
 
 .header {
@@ -79,5 +81,20 @@ body {
 
   &__body {
     padding: 10px;
+  }
+}
+
+.btn {
+  &__loading {
+    margin-right: 5px;
+  }
+}
+
+.error {
+  color: rgba(213, 28, 28, 0.87);
+  font-weight: 600;
+
+  .fa {
+    margin-right: 5px;
   }
 }
