--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -70,3 +70,22 @@ body {
 
 .alert {
   margin-top: 15px; }
+
+.fade-enter {
+  opacity: 0.01; }
+
+.fade-enter.fade-enter-active {
+  opacity: 1;
+  transition: opacity 100ms ease-in; }
+
+.fade-leave {
+  opacity: 1; }
+
+.fade-leave.fade-leave-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in; }
+
+.loading-container {
+  width: 100%;
+  display: flex;
+  justify-content: center; }
