--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -120,3 +120,9 @@ body {
   opacity: 0.01;
   transition: opacity 300ms ease-in;
 }
+
+.loading-container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
