--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -36,8 +36,7 @@ body {
 .list-container {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 20px;
-  height: 150px; }
+  margin-top: 20px; }
   .list-container .card {
     margin: 5px; }
 
@@ -90,4 +89,5 @@ body {
 .loading-container {
   width: 100%;
   display: flex;
-  justify-content: center; }
+  justify-content: center;
+  align-items: center; }
